@@ -1,3 +1,8 @@
+2009-01-28  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR tree-optimization/38984
+	* gcc.dg/pr38984.c: New XFAILed testcase.
+
 2009-01-27  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/37554
